--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "marley_spoon_api",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://almirpask.github.io/recipelist",
   "dependencies": {
+    "@material-ui/core": "^4.9.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "contentful": "^7.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1"
   },
